Fix PostCSS config and add mock server setup
- Fixed PostCSS configuration syntax (ES module to CommonJS)
- Added mock server for testing form submissions
- Added Font Awesome icons for better UI
- Configured Vite proxy for API communication
- Added cross-env for Windows compatibility
- Created test scripts and documentation
- Improved frontend UI and form functionality
- Added comprehensive setup instructions

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>LeadSure - Professional Lead Generation Service</title>
     <meta name="description" content="Get 100% fresh Apollo leads on demand. Professional lead generation service delivering verified data within hours using your Apollo filters.">
     <link rel="icon" type="image/png" href="/src/assets/LeadSure_1752589628551.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
   <body>
     <div id="root"></div>
